--- a/data/index.html
+++ b/data/index.html
@@ -19,11 +19,6 @@
       <p><button id="button" class="button">Toggle</button></p>
     </div>
 
-    <!-- <form>
-      <input type="text" id = chessMoveTxt>
-      <input type="submit" value="Submit" id = 'submitMove'>
-    </form>	 -->
-
     <p>
       <input type="text" id="chessMoveTxt"><br><br>
       <button id="submitMove">Submit Move</button>
@@ -33,6 +28,9 @@
 
 
     <div id = "username">%USERNAME%</div>
+
+    <div id = "boardFEN">%BOARDFEN%</div>
+
 
     <!-- <iframe src="https://lichess.org/tv/frame?theme=brown&bg=dark" style="width: 400px; height: 444px;" allowtransparency="true" frameborder="0"></iframe> -->
     <iframe src="https://lichess.org/training/frame?theme=brown&bg=dark" style="width: 400px; height: 444px;" allowtransparency="true" frameborder="0"></iframe>
